Log request body as byte array